--- a/src/statics/activate.hbs
+++ b/src/statics/activate.hbs
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="header"> HELLO FROM HBS </header>
+<header class="header"> ACTIVATE </header>
 
 <div>
-    WELCOME TO OUR FIRST APPLICATION, WRITTEN IN NODE.JS BY sept-2022
+    ACTIVATE YOUR ACCOUNT
 </div>
+
+<a href="{{front_URL}}/activate?token={{token}}">ACTIVATE</a>
 
 <footer>
     <a href="https://google.com">Go to GOOGLE</a>
