--- a/src/statics/activate.hbs
+++ b/src/statics/activate.hbs
@@ -5,20 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-<header class="header"> ACTIVATE </header>
+<header class="header">Hey</header>
 
-<div>
-    ACTIVATE YOUR ACCOUNT
-</div>
-
-<a href="{{front_URL}}/activate?token={{token}}">ACTIVATE</a>
+<a href="{{frontUrl}}/activate?token={{token}}"> ACTIVATE </a>
 
 <footer>
-    <a href="https://google.com">Go to GOOGLE</a>
+    <a href="https://google.com">GOOOOGLE</a>
 </footer>
 </body>
 </html>
