--- a/src/statics/register.hbs
+++ b/src/statics/register.hbs
@@ -5,18 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-<header class="header"> HELLO FROM HBS </header>
-
+<header class="header">HELLO FROM OKTEN</header>
 <div>
-    WELCOME TO OUR FIRST APPLICATION, WRITTEN IN NODE.JS BY sept-2022
+    Welcome to our first application, written in NODE.JS by sept-2022
 </div>
 
 <footer>
-    <a href="https://google.com">Go to GOOGLE</a>
+    <a href="https://google.com">GOOOOGLE</a>
 </footer>
 </body>
 </html>
