--- a/src/statics/forgotPassword.hbs
+++ b/src/statics/forgotPassword.hbs
@@ -5,17 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-<header class="header"> Restore password </header>
+<header class="header">Restore password</header>
 <div>
-    Don't worry, we control your password. Just follow  our steps and you will be happy.
-<a href="{{front_URL}}/password/forgot?token={{token}}">CLICK TO RESTORE YOUR PASSWORD</a>
+    Don't worry, we control your password. Just follow our steps and you will be happy.
+    <a href="{{frontUrl}}/password/forgot?token={{token}}"> CLICK TO RESTORE YOUR PASSWORD </a>
 </div>
 <footer>
-    <a href="https://google.com">Go to GOOGLE</a>
+    <a href="https://google.com">GOOOOGLE</a>
 </footer>
 </body>
 </html>
